@startuml

skinparam monochrome true
skinparam defaultFontName OpenSans

hide empty fields
hide empty methods

abstract class AbstractService {
setConfigurationParameter()
start()
stop()
reset()
...()
}

Service <|-up- AbstractService
VirtualService <|-up- AbstractService

Service o--"1..*" Strategy

VirtualService -down-|> AggregatedService
VirtualService -down-|> Timer
VirtualService -down-|> PIDController
VirtualService -down-|> FurtherVirtualService

class Module {
connect()
}

Module o--"1..*" Service

class Service {
setStrategy()
setStrategyParameter()
}

abstract class VirtualService {
instantiate()
setStrategyParameter()
}

class AggregatedService

AggregatedService o--"1..*" AbstractService : necessaryServices >

class Timer

class PIDController
@enduml